# my-open-claw

./: AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  PROSE.md  README.md  SOUL.md  docker-compose.yml
.github/workflows/: ci.yml
.sisyphus/: ralph-loop.local.md
apps/macos/src/: index.html
apps/macos/src-tauri/: Cargo.toml  tauri.conf.json
apps/macos/src-tauri/src/: main.rs
crates/openclaw-cli/: Cargo.toml
crates/openclaw-cli/src/: main.rs  ws_client.rs
crates/openclaw-cli/src/commands/: agent.rs  browser.rs  channels.rs  cron.rs  dns.rs  doctor.rs  gateway.rs  hooks.rs  ingest.rs  logs.rs  memory.rs  message.rs  mod.rs  models.rs  nodes.rs  onboard.rs  plugins.rs  sessions.rs  tui.rs
crates/openclaw-core/: Cargo.toml
crates/openclaw-core/migrations/: 20240220000000_init.sql
crates/openclaw-core/src/: channel.rs  config.rs  db.rs  error.rs  lib.rs  message.rs  provider.rs  session.rs  tool.rs  workspace.rs
crates/openclaw-core/tests/: core_tests.rs
crates/openclaw-gateway/: Cargo.toml
crates/openclaw-gateway/src/: agent.rs  agent_router.rs  auth.rs  cron.rs  lib.rs  mcp.rs  network.rs  nodes.rs  routes.rs  state.rs  webhooks.rs  ws.rs
crates/openclaw-gateway/src/auth/: mod.rs  oauth.rs  pairing.rs
crates/openclaw-gateway/src/channels/: bluebubbles.rs  discord.rs  feishu.rs  google_chat.rs  gotify.rs  irc.rs  line.rs  matrix.rs  mattermost.rs  mod.rs  nostr.rs  signal.rs  slack.rs  teams.rs  telegram.rs  whatsapp.rs  zalo.rs  zulip.rs
crates/openclaw-gateway/src/memory/: service.rs
crates/openclaw-gateway/src/provider/: anthropic.rs  bedrock.rs  gemini.rs  huggingface.rs  litellm.rs  mod.rs  moonshot.rs  ollama.rs  openai.rs  together.rs  vllm.rs
crates/openclaw-gateway/src/skills/: apple_reminders.rs  clawhub.rs  discord.rs  docker.rs  github.rs  google_calendar.rs  google_sheets.rs  linear.rs  memory.rs  mod.rs  node.rs  notes.rs  notion.rs  obsidian.rs  onepassword.rs  slack.rs  spotify.rs  system.rs  todoist.rs  weather.rs
crates/openclaw-gateway/src/static/: index.html
crates/openclaw-gateway/src/tools/: agents_list.rs  apply_patch.rs  brave.rs  browser.rs  canvas.rs  cron.rs  elevenlabs.rs  exec.rs  fs.rs  gateway.rs  image.rs  message.rs  mod.rs  nodes.rs  openrouter.rs  perplexity.rs  process.rs  python.rs  sandbox.rs  search.rs  session_status.rs  sessions.rs  shell.rs  weather.rs  web_fetch.rs  youtube.rs
crates/openclaw-gateway/src/voice/: service.rs
crates/openclaw-gateway/tests/: gateway_tests.rs
ui/: index.html  package.json
ui/src/: App.tsx
