[workspace]
resolver = "2"
members = [
    "crates/openclaw-core",
    "crates/openclaw-gateway",
    "crates/openclaw-cli",
    "apps/macos/src-tauri",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/openclaw/openclaw"

[workspace.dependencies]
# ... (existing dependencies)
thiserror = "1.0"
# ... (other dependencies)
opentelemetry = { version = "0.23", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.16", features = ["http-proto"] }
opentelemetry_sdk = { version = "0.23", features = ["rt-tokio"] }
tracing-opentelemetry = "0.24"

