[package]
name = "openclaw-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "CLI for OpenClaw personal AI assistant"

[[bin]]
name = "openclaw"
path = "src/main.rs"

[dependencies]
openclaw-core = { workspace = true }
openclaw-gateway = { workspace = true }
clap = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
walkdir = "2"
tokio-tungstenite = { workspace = true }
futures = { workspace = true }
uuid = { workspace = true }
anyhow = { workspace = true }
colored = { workspace = true }
dialoguer = { workspace = true }
directories = { workspace = true }
chrono = { workspace = true }
