[package]
name = "openclaw-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core types, config, session, and protocol for OpenClaw"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
directories = { workspace = true }
dashmap = { workspace = true }
tokio = { workspace = true }
sqlx = { workspace = true }
lancedb = { workspace = true }
arrow = { workspace = true }
arrow-array = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
