[package]
name = "openclaw-gateway"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "WebSocket gateway server for OpenClaw"

[dependencies]
openclaw-core = { workspace = true }
axum = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
dashmap = { workspace = true }
futures = { workspace = true }
reqwest = { workspace = true }
async-trait = { workspace = true }

[dev-dependencies]
tokio-tungstenite = { workspace = true }
reqwest = { workspace = true }
