[package]
name = "openclaw-gateway"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "WebSocket gateway server for OpenClaw"

[dependencies]
openclaw-core = { workspace = true }
axum = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
dashmap = { workspace = true }
futures = { workspace = true }
reqwest = { workspace = true }
async-trait = { workspace = true }
tokio-tungstenite = { workspace = true }
qdrant-client = "1.10"
fastembed = "4"
anyhow = "1"

[dev-dependencies]
reqwest = { workspace = true }
