[package]
name = "openclaw-desktop"
version = "0.1.0"
description = "OpenClaw Desktop"
authors = ["OpenClaw Team"]
edition = "2021"

[build-dependencies]
tauri-build = "2.0.0-rc"

[dependencies]
tauri = { version = "2.0.0-rc", features = ["tray-icon"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[[bin]]
name = "openclaw-desktop"
path = "src/main.rs"
